--- a/index.html
+++ b/index.html
@@ -1,2 +1,47 @@
-<button>MKT Freight Carrier</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+    <div class="container-fuild">
+        <div class="banner">
+          <div class="bg"></div>
+          <div class="content">
+            MKT FREIGHT CARRIER      </div>
+        </div>
+        <div class="container">
+            <header>
+                <div class="logo">
+                    Your Lightning Fast Delivery Partner
+                </div>
+                <div class="signin">
+                    <button>Sign in</button>
+                </div>
+            </header>
+            <nav>
+                <ul>
+                    <li>Linkedin</li>
+                    <li>Instagram</li>
+                    
+                </ul>
+            </nav>
+            <div class="library allowActive">
+                <div class="item">item1</div>
+                <div class="item">item2</div>
+                <div class="item">item3</div>
+                <div class="item">item4</div>
+            </div>
+            <div class="des allowActive">
+                Our warehouse storage capacity in Lucknow starts from 5000 sq. ft. and we can match up to any high-level requirements of all types of businesses in the city. Our Lucknow warehouse facility is well-connected to major locations in the city and hence, we provide an upper hand to our clients to connect with new marketplaces and grab the chances of growth and exposure. Our available On-Demand Warehouse Services Lucknow include Warehouse On Rent/Lease/Hire, 3PL Warehouse Services, Logistics Solutions, Warehousing and Distribution Services, Outsourcing Warehouse Operations, Integrated Transportation Facilities, Last-Mile Delivery, CFA Services etc.
+            </div>
+        </div>
+    </div>
+    
+    <script src="app.js"></script>
+</body>
+</html>
