--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 </div>
     
                 <div class="content">
-                    <a href="http://127.0.0.1:5501/practice.html">
+                    <a href="https://akshaydilipyadav.github.io/MKT-Freight-Carrier/">
                         <div class="name">
                             <h1>
                                <u> MKT FREIGHT CARRIER</u>
